namen veranderen en les5 beginnen

--- a/les3-tentoonstellingen/index.html
+++ b/les3-tentoonstellingen/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Les03 Tentoonstellingen</title>
+    <title>Les 3 - Tentoonstellingen</title>
 </head>
 <body>
     <h1>Les 3 Tentoonstellingen</h1>
