--- a/les4-seizoenen/index.html
+++ b/les4-seizoenen/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>4 seizoenen</title>
+    <title>Les 4 - Seizoenen</title>
 </head>
 <body>
     <div id="container">
