les06 dingen toevoegen

--- a/les5-silver-bullet-adventure/index.html
+++ b/les5-silver-bullet-adventure/index.html
@@ -12,8 +12,14 @@
         <img id="myImage" src="img/0.jpg" height="600px" alt="foto sb">
         <div id="myInteraction">
             <div id="myTitle">hier komt de titel</div>
-            <input type="text" id="myInput" autocomplete="off">
-            <input type="button" value="voer in" onclick="getInput()">
+            <input autofocus autocomplete="off" type="text" id="myInput"><button onclick="getInput()">voer in</button>
+            <h3>Kies welke richting je op wilt:</h3>
+            <nav>
+                <button id="knopNoord" onclick="goDirection('noord')">Noord</button>
+                <button id="knopWest" onclick="goDirection('west')">West</button><button id="knopOost" onclick="goDirection('oost')">Oost</button>
+                <button id="knopZuid" onclick="goDirection('zuid')">Zuid</button>
+            </nav>
+            <img src="img/map_compass.png" id="mapImage">
         </div>
     </div>
     <script src="script.js"></script>
