--- a/les5-silver-bullet-adventure/index.html
+++ b/les5-silver-bullet-adventure/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Les 5 - Silver Bullet Adventure</title>
+    <title>Les 5 en 6 - Silver Bullet Adventure</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
